fix(chips): placeholder is truncated even though there is room
- add a new `md-input-class` to `<md-chips>`
  to `md-chips` and `md-contact-chips`
  - allows custom styling like adding a `min-width` for supporting
    very long placeholders
  - this is the same API as `<md-autocomplete>` already has
  - add demo of long `placeholder` and `md-input-class`

Fixes #10630

--- a/src/components/chips/demoBasicUsage/style.scss
+++ b/src/components/chips/demoBasicUsage/style.scss
@@ -3,6 +3,9 @@
   color: rgb(221,44,0);
   margin-top: 10px;
 }
+.demo-long-fruit-input {
+  min-width: 340px;
+}
 .custom-chips {
   md-chip {
     position: relative;
